--- a/src/main/resources/vm/system/whitelistDirectory.vm
+++ b/src/main/resources/vm/system/whitelistDirectory.vm
@@ -38,6 +38,15 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <div class="layui-inline" style="width: 80%;height:30vh;">
+                <label class="layui-form-label">nginx目录</label>
+                <div class="layui-input-block auto">
+                    <textarea name="nginx" placeholder="请输入nginx存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径、不允许输入根路径"
+                              class="layui-textarea auto">$!nginx</textarea>
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
             </div>
