--- a/src/main/resources/vm/manage/filemanage.vm
+++ b/src/main/resources/vm/manage/filemanage.vm
@@ -24,7 +24,8 @@
 
 <body>
 <div class="layui-row">
-    <button id="uploadFile" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>上传文件</button>
+    <button id="uploadFile" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>批量上传</button>
+    <button id="uploadFile_Import" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>覆盖导入</button>
     <button id="refresh" class="layui-btn layui-btn-sm">刷新</button>
     <button id="clear" class="layui-btn layui-btn-sm layui-btn-danger">清空文件</button>
 </div>
@@ -70,7 +71,7 @@
                 }
             });
 
-            var uploadInst = upload.render({
+            upload.render({
                 elem: '#uploadFile',
                 accept: 'file',
                 data: {
@@ -86,9 +87,7 @@
                 allDone: function (obj) {
                     layer.msg("文件总数：" + obj.total + " 成功上传：" + obj.successful + " 上传失败：" + obj.aborted);
                     setTimeout(function () {
-                        table.reload('table_file', {
-                            // height: 'full-52'
-                        });
+                        table.reload('table_file', {});
                         layer.closeAll();
                     }, 2000);
                 },
@@ -97,6 +96,35 @@
                 },
                 error: function () {
                     layer.msg('上传失败');
+                }
+            });
+
+            upload.render({
+                elem: '#uploadFile_Import',
+                accept: 'file',
+                data: {
+                    id: '$id',
+                    type: "unzip"
+                },
+                multiple: false,
+                exts: 'zip',
+                acceptMime: '.zip',
+                url: '/file/upload',
+                before: function () {
+                    layer.load(1, {
+                        shade: [0.5, '#fff'] //0.1透明度的白色背景
+                    });
+                },
+                done: function (res, index, upload) {
+                    layer.msg(res.msg);
+                    setTimeout(function () {
+                        table.reload('table_file', {});
+                        layer.closeAll();
+                    }, 2000);
+                },
+                error: function () {
+                    layer.msg('上传失败');
+                    layer.closeAll();
                 }
             });
 
