--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -9,6 +9,12 @@
             width: 100%;
             height: 100%;
         }
+
+        .randCode {
+            padding: 0;
+            min-height: 36px;
+            height: 38px;
+        }
     </style>
 </head>
 
@@ -37,6 +43,16 @@
                     <div class="layui-input-block" style="margin-left: 0px;">
                         <input type="password" required lay-verify="required" class="layui-input" placeholder="请输入密码"
                                name="userPwd">
+                    </div>
+                </div>
+                <div class="layui-form-item" id="randCodeDiv" style="display: none;">
+                    <div class="layui-input-inline" style="margin-left: 0px;">
+                        <input type="text" name="code" placeholder="请输入验证码" autocomplete="off"
+                               class="layui-input">
+                    </div>
+                    <div class="layui-form-mid layui-word-aux" onclick="showCode();"
+                         style="padding: 0 !important; margin: 0;">
+                        <img src="" id="codeImg" class="randCode">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -86,6 +102,10 @@
                             });
                             window.location.href = '/index';
                         } else {
+                            // 显示验证码
+                            if (600 == data.code) {
+                                showCode();
+                            }
                             layer.msg(data.msg);
                         }
                     },
@@ -95,7 +115,16 @@
                 });
                 return false;
             });
+
+            #if($showCode)
+                showCode();
+            #end
         });
+    }
+
+    function showCode() {
+        $("#codeImg").attr("src", "/randCode.png?time=" + new Date().getTime());
+        $("#randCodeDiv").show();
     }
 </script>
 
