--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -85,6 +85,7 @@
 <script type="text/javascript">
     var loopLog = false;
     var loopLogTime;
+    var heart;
 
     function loadSuccess() {
         const showLogDom = $('.console .terminal');
@@ -145,6 +146,15 @@
                     if (!loopLog) {
                         loopLogAjax();
                     }
+                    clearInterval(heart);
+                    // 创建心跳，防止掉线
+                    heart = setInterval(function () {
+                        const data = {
+                            op: "heart",
+                            projectId: "$!projectInfo.id"
+                        };
+                        ws.send(JSON.stringify(data));
+                    }, 5000);
                 }
                 scrollToBotomm();
             };
