--- a/src/main/resources/vm/manage/internal.vm
+++ b/src/main/resources/vm/manage/internal.vm
@@ -13,6 +13,15 @@
             margin-top: 30px;
         }
 
+        .layui-table-box {
+            height: 80px;
+        }
+
+        .layui-border-box {
+            height: 79px !important;
+        }
+
+
         .but {
             width: 50px;
             padding: 10px;
@@ -25,9 +34,9 @@
 <div>
     <a class="but" href="/manage/stack?tag=$!internal.tag">导出堆栈信息</a>
     <a class="but" href="/manage/ram?tag=$!internal.tag">导出内存信息</a>
-##    <div class="info">
-##        $internal.ram
-##    </div>
+    <div class="info">
+        $internal.ram
+    </div>
 
 </div>
 
