--- a/src/main/resources/vm/manage/port.vm
+++ b/src/main/resources/vm/manage/port.vm
@@ -13,9 +13,35 @@
 </head>
 
 <body>
-<div>
-    <pre>#if($!port)$!port #else“暂无数据”  #end </pre>
-</div>
+##<div>
+##    <pre>#if($!port)$!port #else“暂无数据”  #end </pre>
+##</div>
+<table class="layui-table">
+    <thead>
+    <tr>
+        <th>连接协议</th>
+        <th>接收队列</th>
+        <th>发送队列</th>
+        <th>本地地址</th>
+        <th>远程地址</th>
+        <th>状态</th>
+        <th>进程id/项目名称</th>
+    </tr>
+    </thead>
+    <tbody>
+        #foreach($item in $!port)
+        <tr>
+            <td>$!item.protocol</td>
+            <td>$!item.receive</td>
+            <td>$!item.send</td>
+            <td>$!item.local</td>
+            <td>$!item.foreign</td>
+            <td>$!item.status</td>
+            <td>$!item.name</td>
+        </tr>
+        #end
+    </tbody>
+</table>
 
 </body>
 </html>
