--- a/src/main/resources/vm/user/list.vm
+++ b/src/main/resources/vm/user/list.vm
@@ -71,11 +71,23 @@
                     <input type="checkbox" value="true" name="manage" lay-skin="switch" lay-text="是|否">
                 </div>
             </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">上传文件权限</label>
+                <div class="layui-input-block">
+                    <input type="checkbox" value="true" name="uploadFile" lay-skin="switch" lay-text="是|否">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">删除文件权限</label>
+                <div class="layui-input-block">
+                    <input type="checkbox" value="true" name="deleteFile" lay-skin="switch" lay-text="是|否">
+                </div>
+            </div>
         </div>
         #if($projects && $projects.size()>0)
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">管理项目</label>
+                    <label class="layui-form-label" title="能删除项目，启动停止项目">管理项目</label>
                     <div class="layui-input-block">
                         #foreach($pItem in $projects)
                             <input type="checkbox" name="project" project="$pItem.id" value="$pItem.id"
@@ -109,6 +121,7 @@
             elem: '#tab_user',
             url: '/user/getUserList',
             // height: 'full-52',
+            method: 'POST',
             even: true,
             cols: [[
                 {field: 'id', title: 'id'},
@@ -133,6 +146,10 @@
             for (var key in data) {
                 if ("manage" === key) {
                     $('#form_user [name="manage"]').prop('checked', data[key]);
+                } else if ('uploadFile' === key) {
+                    $('#form_user [name="uploadFile"]').prop('checked', data[key]);
+                } else if ('deleteFile' === key) {
+                    $('#form_user [name="deleteFile"]').prop('checked', data[key]);
                 } else if ('projects' === key) {
                     const projects = data[key];
                     if (projects) {
@@ -149,7 +166,7 @@
                 type: 1,
                 title: '编辑',
                 content: $('#div-user'),
-                area: ['60%', '60%'],
+                area: ['60%', '80%'],
                 btnAlign: 'c',
                 btn: ['提交'],
                 yes: function (index, layero) {
@@ -165,6 +182,8 @@
             document.getElementById('form_user').reset();
             $('#form_user [name="id"]').attr('readonly', false).removeClass('layui-disabled');
             $('#form_user [name="manage"]').prop('checked', false);
+            $('#form_user [name="uploadFile"]').prop('checked', false);
+            $('#form_user [name="deleteFile"]').prop('checked', false);
             $('#form_user [name="project"]').prop('checked', false);
             // form.render();
             // 弹出
@@ -172,7 +191,7 @@
                 type: 1,
                 title: '新增用户',
                 content: $('#div-user'),
-                area: ['60%', '60%'],
+                area: ['60%', '80%'],
                 btnAlign: 'c',
                 btn: ['提交'],
                 yes: function (index, layero) {
